# mmlu_prox_open

./: .env.example  CLAUDE.md  README.md  README_classification.md  download_dataset.py  elluminate_upload.ipynb  hello.py  is_answerable.csv  mmlu_analysis.ipynb  mmlu_prox_criterion_setup.ipynb  pyproject.toml  question_classifier.py  test_azure_openai.py  test_classification_simple.py  test_classifier.py
mmlu_prox_classified/: data-00000-of-00001.arrow  dataset_info.json  state.json
